Parser.output
   0  $accept : %entry% $end

   1  program : func_def T_eof

   2  func_def : T_var T_lparen fpar_list_opt T_rparen T_colon r_type local_def_rep compound_stmt

   3  fpar_list_opt : fpar_list
   4                |

   5  fpar_list : fpar_def fpar_def_rep

   6  fpar_def_rep : T_comma fpar_def fpar_def_rep
   7               |

   8  fpar_def : T_var T_colon fpar_def_opt type

   9  fpar_def_opt : T_reference
  10               |

  11  data_type : T_int
  12            | T_byte

  13  type : data_type type_opt

  14  type_opt : T_lbra T_rbra
  15           |

  16  r_type : data_type
  17         | T_proc

  18  local_def_rep : local_def local_def_rep
  19                |

  20  local_def : func_def
  21            | var_def

  22  var_def : T_var T_colon data_type var_def_opt T_semi

  23  var_def_opt : T_lbra T_const T_rbra
  24              |

  25  stmt : T_semi
  26       | l_value T_assign expr T_semi
  27       | compound_stmt
  28       | func_call T_semi
  29       | T_if T_lparen cond T_rparen stmt
  30       | T_if T_lparen cond T_rparen stmt T_else stmt
  31       | T_while T_lparen cond T_rparen stmt
  32       | T_return return_opt T_semi

  33  return_opt : expr
  34             |

  35  compound_stmt : T_lcurl stmt_rep T_rcurl

  36  stmt_rep : stmt stmt_rep
  37           |

  38  func_call : T_var T_lparen expr_list_opt T_rparen

  39  expr_list_opt : expr_list
  40                |

  41  expr_list : expr expr_list_rep

  42  expr_list_rep : T_comma expr expr_list_rep
  43                |

  44  expr : T_const
  45       | T_char
  46       | l_value
  47       | T_lparen expr T_rparen
  48       | func_call
  49       | expr T_plus expr
  50       | expr T_minus expr
  51       | expr T_times expr
  52       | expr T_div expr
  53       | expr T_mod expr
  54       | T_plus expr
  55       | T_minus expr

  56  l_value : T_var expr_opt
  57          | T_string

  58  expr_opt : T_lbra expr T_rbra
  59           |

  60  cond : T_true
  61       | T_false
  62       | T_lparen cond T_rparen
  63       | T_not cond
  64       | expr T_eq expr
  65       | expr T_neq expr
  66       | expr T_lt expr
  67       | expr T_gt expr
  68       | expr T_le expr
  69       | expr T_ge expr
  70       | cond T_and cond
  71       | cond T_or cond

  72  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (72)

	T_var  shift 3
	.  error

	program  goto 4
	func_def  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	func_def : T_var . T_lparen fpar_list_opt T_rparen T_colon r_type local_def_rep compound_stmt  (2)

	T_lparen  shift 6
	.  error


state 4
	%entry% : '\001' program .  (72)

	.  reduce 72


state 5
	program : func_def . T_eof  (1)

	T_eof  shift 7
	.  error


state 6
	func_def : T_var T_lparen . fpar_list_opt T_rparen T_colon r_type local_def_rep compound_stmt  (2)
	fpar_list_opt : .  (4)

	T_var  shift 8
	T_rparen  reduce 4

	fpar_list  goto 9
	fpar_def  goto 10
	fpar_list_opt  goto 11


state 7
	program : func_def T_eof .  (1)

	.  reduce 1


state 8
	fpar_def : T_var . T_colon fpar_def_opt type  (8)

	T_colon  shift 12
	.  error


state 9
	fpar_list_opt : fpar_list .  (3)

	.  reduce 3


state 10
	fpar_list : fpar_def . fpar_def_rep  (5)
	fpar_def_rep : .  (7)

	T_comma  shift 13
	T_rparen  reduce 7

	fpar_def_rep  goto 14


state 11
	func_def : T_var T_lparen fpar_list_opt . T_rparen T_colon r_type local_def_rep compound_stmt  (2)

	T_rparen  shift 15
	.  error


state 12
	fpar_def : T_var T_colon . fpar_def_opt type  (8)
	fpar_def_opt : .  (10)

	T_reference  shift 16
	T_byte  reduce 10
	T_int  reduce 10

	fpar_def_opt  goto 17


state 13
	fpar_def_rep : T_comma . fpar_def fpar_def_rep  (6)

	T_var  shift 8
	.  error

	fpar_def  goto 18


state 14
	fpar_list : fpar_def fpar_def_rep .  (5)

	.  reduce 5


state 15
	func_def : T_var T_lparen fpar_list_opt T_rparen . T_colon r_type local_def_rep compound_stmt  (2)

	T_colon  shift 19
	.  error


state 16
	fpar_def_opt : T_reference .  (9)

	.  reduce 9


state 17
	fpar_def : T_var T_colon fpar_def_opt . type  (8)

	T_byte  shift 20
	T_int  shift 21
	.  error

	type  goto 22
	data_type  goto 23


state 18
	fpar_def_rep : T_comma fpar_def . fpar_def_rep  (6)
	fpar_def_rep : .  (7)

	T_comma  shift 13
	T_rparen  reduce 7

	fpar_def_rep  goto 24


state 19
	func_def : T_var T_lparen fpar_list_opt T_rparen T_colon . r_type local_def_rep compound_stmt  (2)

	T_byte  shift 20
	T_int  shift 21
	T_proc  shift 25
	.  error

	r_type  goto 26
	data_type  goto 27


state 20
	data_type : T_byte .  (12)

	.  reduce 12


state 21
	data_type : T_int .  (11)

	.  reduce 11


state 22
	fpar_def : T_var T_colon fpar_def_opt type .  (8)

	.  reduce 8


state 23
	type : data_type . type_opt  (13)
	type_opt : .  (15)

	T_lbra  shift 28
	T_rparen  reduce 15
	T_comma  reduce 15

	type_opt  goto 29


state 24
	fpar_def_rep : T_comma fpar_def fpar_def_rep .  (6)

	.  reduce 6


state 25
	r_type : T_proc .  (17)

	.  reduce 17


state 26
	func_def : T_var T_lparen fpar_list_opt T_rparen T_colon r_type . local_def_rep compound_stmt  (2)
	local_def_rep : .  (19)

	T_var  shift 30
	T_lcurl  reduce 19

	func_def  goto 31
	local_def  goto 32
	var_def  goto 33
	local_def_rep  goto 34


state 27
	r_type : data_type .  (16)

	.  reduce 16


state 28
	type_opt : T_lbra . T_rbra  (14)

	T_rbra  shift 35
	.  error


state 29
	type : data_type type_opt .  (13)

	.  reduce 13


state 30
	func_def : T_var . T_lparen fpar_list_opt T_rparen T_colon r_type local_def_rep compound_stmt  (2)
	var_def : T_var . T_colon data_type var_def_opt T_semi  (22)

	T_lparen  shift 6
	T_colon  shift 36
	.  error


state 31
	local_def : func_def .  (20)

	.  reduce 20


state 32
	local_def_rep : local_def . local_def_rep  (18)
	local_def_rep : .  (19)

	T_var  shift 30
	T_lcurl  reduce 19

	func_def  goto 31
	local_def  goto 32
	var_def  goto 33
	local_def_rep  goto 37


state 33
	local_def : var_def .  (21)

	.  reduce 21


state 34
	func_def : T_var T_lparen fpar_list_opt T_rparen T_colon r_type local_def_rep . compound_stmt  (2)

	T_lcurl  shift 38
	.  error

	compound_stmt  goto 39


state 35
	type_opt : T_lbra T_rbra .  (14)

	.  reduce 14


state 36
	var_def : T_var T_colon . data_type var_def_opt T_semi  (22)

	T_byte  shift 20
	T_int  shift 21
	.  error

	data_type  goto 40


state 37
	local_def_rep : local_def local_def_rep .  (18)

	.  reduce 18


state 38
	compound_stmt : T_lcurl . stmt_rep T_rcurl  (35)
	stmt_rep : .  (37)

	T_if  shift 41
	T_return  shift 42
	T_while  shift 43
	T_var  shift 44
	T_string  shift 45
	T_lcurl  shift 38
	T_semi  shift 46
	T_rcurl  reduce 37

	stmt  goto 47
	compound_stmt  goto 48
	func_call  goto 49
	l_value  goto 50
	stmt_rep  goto 51


state 39
	func_def : T_var T_lparen fpar_list_opt T_rparen T_colon r_type local_def_rep compound_stmt .  (2)

	.  reduce 2


state 40
	var_def : T_var T_colon data_type . var_def_opt T_semi  (22)
	var_def_opt : .  (24)

	T_lbra  shift 52
	T_semi  reduce 24

	var_def_opt  goto 53


state 41
	stmt : T_if . T_lparen cond T_rparen stmt  (29)
	stmt : T_if . T_lparen cond T_rparen stmt T_else stmt  (30)

	T_lparen  shift 54
	.  error


state 42
	stmt : T_return . return_opt T_semi  (32)
	return_opt : .  (34)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	T_semi  reduce 34

	func_call  goto 60
	expr  goto 61
	l_value  goto 62
	return_opt  goto 63


state 43
	stmt : T_while . T_lparen cond T_rparen stmt  (31)

	T_lparen  shift 64
	.  error


state 44
	func_call : T_var . T_lparen expr_list_opt T_rparen  (38)
	l_value : T_var . expr_opt  (56)
	expr_opt : .  (59)

	T_lparen  shift 65
	T_lbra  shift 66
	T_rparen  reduce 59
	T_plus  reduce 59
	T_minus  reduce 59
	T_times  reduce 59
	T_assign  reduce 59
	T_div  reduce 59
	T_mod  reduce 59
	T_and  reduce 59
	T_or  reduce 59
	T_eq  reduce 59
	T_neq  reduce 59
	T_lt  reduce 59
	T_gt  reduce 59
	T_le  reduce 59
	T_ge  reduce 59
	T_rbra  reduce 59
	T_semi  reduce 59
	T_comma  reduce 59

	expr_opt  goto 67


state 45
	l_value : T_string .  (57)

	.  reduce 57


state 46
	stmt : T_semi .  (25)

	.  reduce 25


state 47
	stmt_rep : stmt . stmt_rep  (36)
	stmt_rep : .  (37)

	T_if  shift 41
	T_return  shift 42
	T_while  shift 43
	T_var  shift 44
	T_string  shift 45
	T_lcurl  shift 38
	T_semi  shift 46
	T_rcurl  reduce 37

	stmt  goto 47
	compound_stmt  goto 48
	func_call  goto 49
	l_value  goto 50
	stmt_rep  goto 68


state 48
	stmt : compound_stmt .  (27)

	.  reduce 27


state 49
	stmt : func_call . T_semi  (28)

	T_semi  shift 69
	.  error


state 50
	stmt : l_value . T_assign expr T_semi  (26)

	T_assign  shift 70
	.  error


state 51
	compound_stmt : T_lcurl stmt_rep . T_rcurl  (35)

	T_rcurl  shift 71
	.  error


state 52
	var_def_opt : T_lbra . T_const T_rbra  (23)

	T_const  shift 72
	.  error


state 53
	var_def : T_var T_colon data_type var_def_opt . T_semi  (22)

	T_semi  shift 73
	.  error


state 54
	stmt : T_if T_lparen . cond T_rparen stmt  (29)
	stmt : T_if T_lparen . cond T_rparen stmt T_else stmt  (30)

	T_false  shift 74
	T_true  shift 75
	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 76
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	T_not  shift 77
	.  error

	func_call  goto 60
	expr  goto 78
	l_value  goto 62
	cond  goto 79


state 55
	expr : T_const .  (44)

	.  reduce 44


state 56
	expr : T_lparen . expr T_rparen  (47)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 80
	l_value  goto 62


state 57
	expr : T_plus . expr  (54)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 81
	l_value  goto 62


state 58
	expr : T_minus . expr  (55)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 82
	l_value  goto 62


state 59
	expr : T_char .  (45)

	.  reduce 45


state 60
	expr : func_call .  (48)

	.  reduce 48


state 61
	return_opt : expr .  (33)
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_semi  reduce 33


state 62
	expr : l_value .  (46)

	.  reduce 46


state 63
	stmt : T_return return_opt . T_semi  (32)

	T_semi  shift 88
	.  error


state 64
	stmt : T_while T_lparen . cond T_rparen stmt  (31)

	T_false  shift 74
	T_true  shift 75
	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 76
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	T_not  shift 77
	.  error

	func_call  goto 60
	expr  goto 78
	l_value  goto 62
	cond  goto 89


state 65
	func_call : T_var T_lparen . expr_list_opt T_rparen  (38)
	expr_list_opt : .  (40)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	T_rparen  reduce 40

	func_call  goto 60
	expr_list  goto 90
	expr  goto 91
	l_value  goto 62
	expr_list_opt  goto 92


state 66
	expr_opt : T_lbra . expr T_rbra  (58)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 93
	l_value  goto 62


state 67
	l_value : T_var expr_opt .  (56)

	.  reduce 56


state 68
	stmt_rep : stmt stmt_rep .  (36)

	.  reduce 36


state 69
	stmt : func_call T_semi .  (28)

	.  reduce 28


state 70
	stmt : l_value T_assign . expr T_semi  (26)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 94
	l_value  goto 62


state 71
	compound_stmt : T_lcurl stmt_rep T_rcurl .  (35)

	.  reduce 35


state 72
	var_def_opt : T_lbra T_const . T_rbra  (23)

	T_rbra  shift 95
	.  error


state 73
	var_def : T_var T_colon data_type var_def_opt T_semi .  (22)

	.  reduce 22


state 74
	cond : T_false .  (61)

	.  reduce 61


state 75
	cond : T_true .  (60)

	.  reduce 60


state 76
	expr : T_lparen . expr T_rparen  (47)
	cond : T_lparen . cond T_rparen  (62)

	T_false  shift 74
	T_true  shift 75
	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 76
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	T_not  shift 77
	.  error

	func_call  goto 60
	expr  goto 96
	l_value  goto 62
	cond  goto 97


state 77
	cond : T_not . cond  (63)

	T_false  shift 74
	T_true  shift 75
	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 76
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	T_not  shift 77
	.  error

	func_call  goto 60
	expr  goto 78
	l_value  goto 62
	cond  goto 98


state 78
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	cond : expr . T_eq expr  (64)
	cond : expr . T_neq expr  (65)
	cond : expr . T_lt expr  (66)
	cond : expr . T_gt expr  (67)
	cond : expr . T_le expr  (68)
	cond : expr . T_ge expr  (69)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_eq  shift 99
	T_neq  shift 100
	T_lt  shift 101
	T_gt  shift 102
	T_le  shift 103
	T_ge  shift 104
	.  error


state 79
	stmt : T_if T_lparen cond . T_rparen stmt  (29)
	stmt : T_if T_lparen cond . T_rparen stmt T_else stmt  (30)
	cond : cond . T_and cond  (70)
	cond : cond . T_or cond  (71)

	T_rparen  shift 105
	T_and  shift 106
	T_or  shift 107
	.  error


state 80
	expr : T_lparen expr . T_rparen  (47)
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)

	T_rparen  shift 108
	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	.  error


state 81
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	expr : T_plus expr .  (54)

	.  reduce 54


state 82
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	expr : T_minus expr .  (55)

	.  reduce 55


state 83
	expr : expr T_plus . expr  (49)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 109
	l_value  goto 62


state 84
	expr : expr T_minus . expr  (50)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 110
	l_value  goto 62


state 85
	expr : expr T_times . expr  (51)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 111
	l_value  goto 62


state 86
	expr : expr T_div . expr  (52)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 112
	l_value  goto 62


state 87
	expr : expr T_mod . expr  (53)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 113
	l_value  goto 62


state 88
	stmt : T_return return_opt T_semi .  (32)

	.  reduce 32


state 89
	stmt : T_while T_lparen cond . T_rparen stmt  (31)
	cond : cond . T_and cond  (70)
	cond : cond . T_or cond  (71)

	T_rparen  shift 114
	T_and  shift 106
	T_or  shift 107
	.  error


state 90
	expr_list_opt : expr_list .  (39)

	.  reduce 39


state 91
	expr_list : expr . expr_list_rep  (41)
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	expr_list_rep : .  (43)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_comma  shift 115
	T_rparen  reduce 43

	expr_list_rep  goto 116


state 92
	func_call : T_var T_lparen expr_list_opt . T_rparen  (38)

	T_rparen  shift 117
	.  error


state 93
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	expr_opt : T_lbra expr . T_rbra  (58)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_rbra  shift 118
	.  error


state 94
	stmt : l_value T_assign expr . T_semi  (26)
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_semi  shift 119
	.  error


state 95
	var_def_opt : T_lbra T_const T_rbra .  (23)

	.  reduce 23


state 96
	expr : T_lparen expr . T_rparen  (47)
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	cond : expr . T_eq expr  (64)
	cond : expr . T_neq expr  (65)
	cond : expr . T_lt expr  (66)
	cond : expr . T_gt expr  (67)
	cond : expr . T_le expr  (68)
	cond : expr . T_ge expr  (69)

	T_rparen  shift 108
	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_eq  shift 99
	T_neq  shift 100
	T_lt  shift 101
	T_gt  shift 102
	T_le  shift 103
	T_ge  shift 104
	.  error


state 97
	cond : T_lparen cond . T_rparen  (62)
	cond : cond . T_and cond  (70)
	cond : cond . T_or cond  (71)

	T_rparen  shift 120
	T_and  shift 106
	T_or  shift 107
	.  error


state 98
	cond : T_not cond .  (63)
	cond : cond . T_and cond  (70)
	cond : cond . T_or cond  (71)

	.  reduce 63


state 99
	cond : expr T_eq . expr  (64)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 121
	l_value  goto 62


state 100
	cond : expr T_neq . expr  (65)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 122
	l_value  goto 62


state 101
	cond : expr T_lt . expr  (66)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 123
	l_value  goto 62


state 102
	cond : expr T_gt . expr  (67)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 124
	l_value  goto 62


state 103
	cond : expr T_le . expr  (68)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 125
	l_value  goto 62


state 104
	cond : expr T_ge . expr  (69)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 126
	l_value  goto 62


state 105
	stmt : T_if T_lparen cond T_rparen . stmt  (29)
	stmt : T_if T_lparen cond T_rparen . stmt T_else stmt  (30)

	T_if  shift 41
	T_return  shift 42
	T_while  shift 43
	T_var  shift 44
	T_string  shift 45
	T_lcurl  shift 38
	T_semi  shift 46
	.  error

	stmt  goto 127
	compound_stmt  goto 48
	func_call  goto 49
	l_value  goto 50


state 106
	cond : cond T_and . cond  (70)

	T_false  shift 74
	T_true  shift 75
	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 76
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	T_not  shift 77
	.  error

	func_call  goto 60
	expr  goto 78
	l_value  goto 62
	cond  goto 128


state 107
	cond : cond T_or . cond  (71)

	T_false  shift 74
	T_true  shift 75
	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 76
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	T_not  shift 77
	.  error

	func_call  goto 60
	expr  goto 78
	l_value  goto 62
	cond  goto 129


state 108
	expr : T_lparen expr T_rparen .  (47)

	.  reduce 47


state 109
	expr : expr . T_plus expr  (49)
	expr : expr T_plus expr .  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)

	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_rparen  reduce 49
	T_plus  reduce 49
	T_minus  reduce 49
	T_and  reduce 49
	T_or  reduce 49
	T_eq  reduce 49
	T_neq  reduce 49
	T_lt  reduce 49
	T_gt  reduce 49
	T_le  reduce 49
	T_ge  reduce 49
	T_rbra  reduce 49
	T_semi  reduce 49
	T_comma  reduce 49


state 110
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr T_minus expr .  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)

	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_rparen  reduce 50
	T_plus  reduce 50
	T_minus  reduce 50
	T_and  reduce 50
	T_or  reduce 50
	T_eq  reduce 50
	T_neq  reduce 50
	T_lt  reduce 50
	T_gt  reduce 50
	T_le  reduce 50
	T_ge  reduce 50
	T_rbra  reduce 50
	T_semi  reduce 50
	T_comma  reduce 50


state 111
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr T_times expr .  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)

	.  reduce 51


state 112
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr T_div expr .  (52)
	expr : expr . T_mod expr  (53)

	.  reduce 52


state 113
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	expr : expr T_mod expr .  (53)

	.  reduce 53


state 114
	stmt : T_while T_lparen cond T_rparen . stmt  (31)

	T_if  shift 41
	T_return  shift 42
	T_while  shift 43
	T_var  shift 44
	T_string  shift 45
	T_lcurl  shift 38
	T_semi  shift 46
	.  error

	stmt  goto 130
	compound_stmt  goto 48
	func_call  goto 49
	l_value  goto 50


state 115
	expr_list_rep : T_comma . expr expr_list_rep  (42)

	T_const  shift 55
	T_var  shift 44
	T_lparen  shift 56
	T_plus  shift 57
	T_minus  shift 58
	T_char  shift 59
	T_string  shift 45
	.  error

	func_call  goto 60
	expr  goto 131
	l_value  goto 62


state 116
	expr_list : expr expr_list_rep .  (41)

	.  reduce 41


state 117
	func_call : T_var T_lparen expr_list_opt T_rparen .  (38)

	.  reduce 38


state 118
	expr_opt : T_lbra expr T_rbra .  (58)

	.  reduce 58


state 119
	stmt : l_value T_assign expr T_semi .  (26)

	.  reduce 26


state 120
	cond : T_lparen cond T_rparen .  (62)

	.  reduce 62


state 121
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	cond : expr T_eq expr .  (64)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_rparen  reduce 64
	T_and  reduce 64
	T_or  reduce 64


state 122
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	cond : expr T_neq expr .  (65)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_rparen  reduce 65
	T_and  reduce 65
	T_or  reduce 65


state 123
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	cond : expr T_lt expr .  (66)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_rparen  reduce 66
	T_and  reduce 66
	T_or  reduce 66


state 124
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	cond : expr T_gt expr .  (67)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_rparen  reduce 67
	T_and  reduce 67
	T_or  reduce 67


state 125
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	cond : expr T_le expr .  (68)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_rparen  reduce 68
	T_and  reduce 68
	T_or  reduce 68


state 126
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	cond : expr T_ge expr .  (69)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_rparen  reduce 69
	T_and  reduce 69
	T_or  reduce 69


127: shift/reduce conflict (shift 132, reduce 29) on T_else
state 127
	stmt : T_if T_lparen cond T_rparen stmt .  (29)
	stmt : T_if T_lparen cond T_rparen stmt . T_else stmt  (30)

	T_else  shift 132
	T_if  reduce 29
	T_return  reduce 29
	T_while  reduce 29
	T_var  reduce 29
	T_string  reduce 29
	T_lcurl  reduce 29
	T_rcurl  reduce 29
	T_semi  reduce 29


state 128
	cond : cond . T_and cond  (70)
	cond : cond T_and cond .  (70)
	cond : cond . T_or cond  (71)

	.  reduce 70


state 129
	cond : cond . T_and cond  (70)
	cond : cond . T_or cond  (71)
	cond : cond T_or cond .  (71)

	T_and  shift 106
	T_rparen  reduce 71
	T_or  reduce 71


state 130
	stmt : T_while T_lparen cond T_rparen stmt .  (31)

	.  reduce 31


state 131
	expr_list_rep : T_comma expr . expr_list_rep  (42)
	expr : expr . T_plus expr  (49)
	expr : expr . T_minus expr  (50)
	expr : expr . T_times expr  (51)
	expr : expr . T_div expr  (52)
	expr : expr . T_mod expr  (53)
	expr_list_rep : .  (43)

	T_plus  shift 83
	T_minus  shift 84
	T_times  shift 85
	T_div  shift 86
	T_mod  shift 87
	T_comma  shift 115
	T_rparen  reduce 43

	expr_list_rep  goto 133


state 132
	stmt : T_if T_lparen cond T_rparen stmt T_else . stmt  (30)

	T_if  shift 41
	T_return  shift 42
	T_while  shift 43
	T_var  shift 44
	T_string  shift 45
	T_lcurl  shift 38
	T_semi  shift 46
	.  error

	stmt  goto 134
	compound_stmt  goto 48
	func_call  goto 49
	l_value  goto 50


state 133
	expr_list_rep : T_comma expr expr_list_rep .  (42)

	.  reduce 42


state 134
	stmt : T_if T_lparen cond T_rparen stmt T_else stmt .  (30)

	.  reduce 30


State 127 contains 1 shift/reduce conflict.


44 terminals, 29 nonterminals
73 grammar rules, 135 states
